# CocktailScraper

./: .gitignore  README.md  pyproject.toml  setup_project.py  tasks.py  usage_logs.jsonl
data/: bars.db  bars.db-journal
etc/: config.template.toml  config.toml
src/: __init__.py  main.py
src/components/bar_finder/: crew_scraper.py  researcher.py  scraper.py  search.py
src/components/menu_scraper/: __init__.py  controller.py  crawler.py  menu_processor.py  menu_service.py  test_crawler.py
src/core/config/: model_configs.py  settings.py
src/core/tracking/: __init__.py  api_tracker.py  usage_tracker.py
src/core/utils/: utils.py
src/data/: bars.db
src/pipeline/: orchestrator.py
src/storage/: bar_storage.py
