[project]
name = "cocktail-research"
version = "0.1.0"
description = "A CrewAI-based system for researching cocktail bars and menus"
requires-python = ">=3.10,<3.13"
dependencies = [
    "crewai==0.30.0",
    "langchain-community>=0.0.10",
    "openai>=1.0.0",
    "instructor>=0.4.0",
    "chromadb>=0.4.17,<0.5.0", # Version that embedchain expects # Explicitly include this to help resolver
    "embedchain>=0.1.98,<0.2.0",
    "setuptools>=75.8.0",
    "tiktoken>=0.7.0",
    "invoke>=2.2.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/cocktail_research"]

[tool.hatch.metadata]
allow-direct-references = true
